components/retrodep/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: my-test-app
    appstudio.openshift.io/component: retrodep
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elretrodep
  namespace: default
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-retrodep
    weight: null
status: {}
